--- a/BarCodeSystem/BarCodeSystem/Web.config
+++ b/BarCodeSystem/BarCodeSystem/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BarCodeSystem-20170228104612.mdf;Initial Catalog=aspnet-BarCodeSystem-20170228104612;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="BarcodeBaseContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\DB.mdf;Initial Catalog=DB;Integrated Security=True"
+  providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
